Open-MX 0.1.0 (December 20th 2007)
==================================
First official release.

Status:
* API compatibility with MX 1.2 (almost complete).
* Wire compatibility with MX 1.2 (still under development).
* Message retransmission.
* Support for kernel >= 2.6.15.

Other improvements from previous snapshot:
* Warn in user-space when opening an endpoint if its interface is not
  up or does not have a large enough MTU.
* Fix sequence number wrap-around all over the library code to handle
  long-term connections better.
* Ignore some packets instead of aborting in case of high-level of
  reordering on the network.
* Limit zombie send requests to 512 by default.
* Add various per-interface countersin the driver and the omx_counters
  tool to display/clear them.
* Make OMX_VERBOSE configurable to select which debug messages to show.

Caveats:
* Node disconnection not well recovered (some requests will remain
  uncompleted for ever)
* Large message retransmission seem to cause some kernel hang under
  heavy message loss rate.
* Blocking function will busy poll by default to avoid breaking
  retransmission and progression. Use OMX_WAITSPIN=0 to force
  sleeping.
* No background progression or retransmission is done if the
  application does not invoke an Open-MX routine explicitly.





Open-MX alpha 2007-12-03 23:37 (svn r815)
=========================================
This release works well up-to 32kB but still has problems above. MPICH-MX
completes the full IMB benchmark suite if using less than 32kB max.

Changes:
* Add retransmission support
  + Using piggyack or delayed explicit acks in the lib
  + Using kernel timers for pull in the driver
  + All requests have a default timeout of 1000s
    - It may be configured with the new omx_set_request_timeout()
  + Add omx_forget() to avoid getting a completion event from a request
  + Allow buffered send to be completed before being acked, and OMX_ZOMBIE_SEND=0 to disable it