@@ -1,0 +1,10 @@
+# Open-MX configuration
+
+# Which interface to acquire for Open-MX at startup?
+# "all" loads all available interfaces, up to a 8 max by default
+# "eth1,eth3" loads eth1 and eth3
+# "" loads none of them
+IFACES="all"
+
+# Additional open-mx module parameters
+OMX_MODULE_PARAMS=
